# gp-lts-workflow

./: MANIFEST.in  README.rst  setup.cfg  setup.py  tox.ini
docs/: conf.py  index.rst
docs/gp_lts_workflow/: index.rst
gp_lts_workflow/: conftest.py
gp_lts_workflow/example_subpkg/: setup_package.py
licenses/: LICENSE.rst
