[metadata]
name = gp_lts_workflow
author = Gammapy developers
author_email = 
license = BSD 3-Clause
license_file = licenses/LICENSE.rst
url = http://docs.astropy.org/projects/package-template/
description = A package to practice the Gammapy LTS workflow
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = False
github_project = adonath/gp-lts-workflow-practice

[options]
zip_safe = False
packages = find:
python_requires = >=3.8
setup_requires = setuptools_scm
install_requires =
    numpy
    scipy

[options.entry_points]
console_scripts =
    astropy-package-template-example = packagename.example_mod:main

[options.extras_require]
test =
    pytest-astropy
docs =
    sphinx-astropy

[options.package_data]
gp_lts_workflow = data/*

[tool:pytest]
testpaths = "gp_lts_workflow" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
    gp_lts_workflow/_astropy_init*
    gp_lts_workflow/conftest.py
    gp_lts_workflow/*setup_package*
    gp_lts_workflow/tests/*
    gp_lts_workflow/*/tests/*
    gp_lts_workflow/extern/*
    gp_lts_workflow/version*
    */gp_lts_workflow/_astropy_init*
    */gp_lts_workflow/conftest.py
    */gp_lts_workflow/*setup_package*
    */gp_lts_workflow/tests/*
    */gp_lts_workflow/*/tests/*
    */gp_lts_workflow/extern/*
    */gp_lts_workflow/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
